--- a/nginx-functional-testing/nginx/Dockerfile
+++ b/nginx-functional-testing/nginx/Dockerfile
@@ -1,3 +1,6 @@
-FROM nginx
+FROM nginx:1.18.0-alpine
+
+RUN apk add --no-cache curl
+
 RUN rm /etc/nginx/conf.d/*
-ADD my.conf /etc/nginx/conf.d/
+ADD server.conf /etc/nginx/conf.d/
