--- a/nginx-functional-testing/nginx/server.conf
+++ b/nginx-functional-testing/nginx/server.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name  mywebsite.com;
 
     location / {
         return 200;
@@ -26,6 +27,17 @@ server {
 
         add_header Set-Cookie $my_cookie;
         proxy_pass $my_proxy;
+    }
+
+}
+
+
+server {
+    listen 80;
+    server_name  _;
+
+    location = /health {
+        return 200;
     }
 
 }
