--- a/nginx-functional-testing/nginx/server.conf
+++ b/nginx-functional-testing/nginx/server.conf
@@ -1,28 +1,40 @@
+resolver 127.0.0.11 ipv6=off;
+
 server {
     listen 80;
-    server_name  mywebsite.com;
+    listen 443;
 
-    location / {
+    # this is the internal Docker DNS, cache only for 30s
+    # resolver 127.0.0.11 valid=30s;
+    # resolver 127.0.0.1;
+
+    server_name  *.mywebsite.com mywebsite.com;
+    # server_name  _;
+    # proxy_ssl_server_name on;
+
+    location = /health {
         return 200;
     }
 
-    location /github {
-        add_header Set-Cookie "site=github;";
-        proxy_pass https://github.com/;
+    location /washington {
+        set $first_upstream "http://www.washington.edu/";
+        add_header Set-Cookie "site=washington;";
+        proxy_pass $first_upstream;
     }
 
-    location /bitbucket {
-        add_header Set-Cookie "site=bitbucket;";
-        proxy_pass https://bitbucket.org/;
+    location /example {
+        set $second_upstream "http://example.com/";
+        add_header Set-Cookie "site=example;";
+        proxy_pass $second_upstream;
     }
 
-    location = /git {
-        set $my_cookie "site=github;";
-        set $my_proxy "https://github.com/";
+    location = /site {
+        set $my_cookie "site=washington;";
+        set $my_proxy "http://www.washington.edu/";
 
-        if ($cookie_site = "bitbucket") {
-            set $my_cookie "site=bitbucket;";
-            set $my_proxy "https://bitbucket.org/";
+        if ($cookie_site = "example") {
+            set $my_cookie "site=example;";
+            set $my_proxy "http://example.com/";
         }
 
         add_header Set-Cookie $my_cookie;
@@ -34,6 +46,8 @@ server {
 
 server {
     listen 80;
+    listen 443;
+
     server_name  _;
 
     location = /health {
